kube/vite-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vite-app
  labels:
    app: vite-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vite-app
  template:
    metadata:
      labels:
        app: vite-app
    spec:
      containers:
        - name: vite-app
          image: ghcr.io/cheetahbyte/qubear:latest
          ports:
            - containerPort: 80
