kube/vite-service.yml
apiVersion: v1
kind: Service
metadata:
  name: vite-app
spec:
  selector:
    app: vite-app
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
