kube/vite-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vite-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - test.orbiq.services
      secretName: qubear-app-tls
  rules:
    - host: test.orbiq.services
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vite-app
                port:
                  number: 80
